Markers toolips displaying and zoom levels better, though marker layer tooltips have z-index issue and we will need to redo the tooltip interface altogether anyways.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,14 +34,6 @@ body {
     font-size: 0.8em;
 }
 
-.marker-tooltip {
-
-}
-
-.marker-popup {
-
-}
-
 .marker-popup p {
   line-height: 1em;
   margin: 0;
